--- a/YFabric/gradle.properties
+++ b/YFabric/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.2
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.1
 loader_version=0.14.21
 
 # Mod Properties
@@ -13,5 +13,5 @@ mod_version=1.0.0
 maven_group=io.github.thewebcode.y
 archives_base_name=yfabric
 
-# Dependencies
-fabric_version=0.83.0+1.19.4
+#Fabric api
+fabric_version=0.83.1+1.20.1
