--- a/YPlugin/src/main/resources/plugin.yml
+++ b/YPlugin/src/main/resources/plugin.yml
@@ -15,22 +15,22 @@ commands:
     usage: /<command> <skullValue>
   AddCurrency:
     Usage: /addcurrency <Player> <Amount>
-    Permission: commons.command.addcurrency
+    Permission: yplugin.command.addcurrency
     Description: Give the sp  ecified the given amount of server-currency. (Tunnels XP, in this case).
 
   Armor:
     Usage: /armor <leather, iron, gold, diamond> [player]
-    Permission: commons.command.armor
+    Permission: yplugin.command.armor
     Description: Give yourself (or another player) a full set of the desired armor.
   Back:
     Usage: /back
     Permissions:
-      - commons.command.back
-      - commons.back.endportal
-      - commons.back.enderpearl
-      - commons.back.netherportal
-      - commons.back.death
-      - commons.back.warp
+      - yplugin.command.back
+      - yplugin.back.endportal
+      - yplugin.back.enderpearl
+      - yplugin.back.netherportal
+      - yplugin.back.death
+      - yplugin.back.warp
 
     Description:    Teleport yourself to the location you were at before your most recent teleport (or death, warp, etc).
 
@@ -38,7 +38,7 @@ commands:
     Usage:
       - /ban t:100d21h Ban Reason
     Permissions:
-      - commons.command.ban
+      - yplugin.command.ban
 
     Description:
         Place a permanent or temporary ban on on a player.
@@ -47,7 +47,7 @@ commands:
     Usage:
       - /blocktext <id / id:data> <Text>
     Permissions:
-      - commons.command.blocktext
+      - yplugin.command.blocktext
     Description: Write text with blocks where you're pointing your cursor!
 
   Buypremium:
@@ -110,231 +110,231 @@ commands:
 
 
 permissions:
-  commons.*:
-    description: Gives all permission nodes within Commons!
+  yplugin.*:
+    description: Gives all permission nodes within YPlugin!
     children:
-      commons.admin.*: true
-      commons.command.*: true
-      commons.armor.*: true
-      commons.builder: true
-  commons.command.*:
-    description: Gives access to all the commands within Commons.
+      yplugin.admin.*: true
+      yplugin.command.*: true
+      yplugin.armor.*: true
+      yplugin.builder: true
+  yplugin.command.*:
+    description: Gives access to all the commands within YPlugin.
     default: op
     children:
-      commons.command.buypremium: true
-      commons.command.removepremium: true
-      commons.command.addcurrency: true
+      yplugin.command.buypremium: true
+      yplugin.command.removepremium: true
+      yplugin.command.addcurrency: true
       commond.command.armor: true
-      commons.command.back: true
-      commons.command.blocktext: true
-      commons.command.clean: true
-      commons.command.ban: true
-      commons.command.clearinventory: true
-      commons.command.clearinventory.other: true
-      commons.command.time: true
-      commons.debugmode: true
-      commons.command.enchant: true
-      commons.command.feed: true
-      commons.command.fireworks: true
-      commons.command.fly: true
-      commons.command.gadgets: true
-      commons.command.gamemode: true
-      commons.command.god: true
-      commons.commands.grass: true
-      commons.command.hat: true
-      commons.command.heal: true
-      commons.command.heal.other: true
-      commons.command.id: true
-      commons.command.item: true
-      commons.command.message: true
-      commons.command.more: true
-      commons.command.potion: true
-      commons.command.recipe: true
-      commons.command.repair: true
-      commons.command.set: true
-      commons.command.setwarp: true
-      commons.command.setspawn: true
-      commons.command.silence: true
-      commons.command.skull: true
-      commons.command.slay: true
-      commons.command.spawn: true
-      commons.command.spawnmob: true
-      commons.command.spawnmob.enderdragon: true
-      commons.command.speed: true
-      commons.command.tpall: true
-      commons.command.tphere: true
-      commons.command.teleport: true
-      commons.command.teleportother: true
-      commons.command.tppos: true
-      commons.command.tpa: true
-      commons.command.tree: true
-      commons.command.warps: true
-      commons.command.warp: true
-      commons.command.workbench: true
-  commons.admin.*:
-    description: Gives access to all the administrative commands and tasks Commons.
+      yplugin.command.back: true
+      yplugin.command.blocktext: true
+      yplugin.command.clean: true
+      yplugin.command.ban: true
+      yplugin.command.clearinventory: true
+      yplugin.command.clearinventory.other: true
+      yplugin.command.time: true
+      yplugin.debugmode: true
+      yplugin.command.enchant: true
+      yplugin.command.feed: true
+      yplugin.command.fireworks: true
+      yplugin.command.fly: true
+      yplugin.command.gadgets: true
+      yplugin.command.gamemode: true
+      yplugin.command.god: true
+      yplugin.commands.grass: true
+      yplugin.command.hat: true
+      yplugin.command.heal: true
+      yplugin.command.heal.other: true
+      yplugin.command.id: true
+      yplugin.command.item: true
+      yplugin.command.message: true
+      yplugin.command.more: true
+      yplugin.command.potion: true
+      yplugin.command.recipe: true
+      yplugin.command.repair: true
+      yplugin.command.set: true
+      yplugin.command.setwarp: true
+      yplugin.command.setspawn: true
+      yplugin.command.silence: true
+      yplugin.command.skull: true
+      yplugin.command.slay: true
+      yplugin.command.spawn: true
+      yplugin.command.spawnmob: true
+      yplugin.command.spawnmob.enderdragon: true
+      yplugin.command.speed: true
+      yplugin.command.tpall: true
+      yplugin.command.tphere: true
+      yplugin.command.teleport: true
+      yplugin.command.teleportother: true
+      yplugin.command.tppos: true
+      yplugin.command.tpa: true
+      yplugin.command.tree: true
+      yplugin.command.warps: true
+      yplugin.command.warp: true
+      yplugin.command.workbench: true
+  yplugin.admin.*:
+    description: Gives access to all the administrative commands and tasks YPlugin.
     default: op
     children:
-      commons.admin: true
-      commons.command.gadgets: true
-      commons.maintenance.toggle: true
-      commons.maintenance.join: true
-      commons.command.*: true
-      commons.admin.antikick: true
-      commons.armor.*: true
-  commons.armor.*:
+      yplugin.admin: true
+      yplugin.command.gadgets: true
+      yplugin.maintenance.toggle: true
+      yplugin.maintenance.join: true
+      yplugin.command.*: true
+      yplugin.admin.antikick: true
+      yplugin.armor.*: true
+  yplugin.armor.*:
     description: Gives players access to spawning all the armor sets!
     default: op
     children:
-      commons.armor.leather: true
-      commons.armor.iron: true
-      commons.armor.gold: true
-      commons.armor.chain: true
-      commons.armor.diamond: true
-  commons.builder:
+      yplugin.armor.leather: true
+      yplugin.armor.iron: true
+      yplugin.armor.gold: true
+      yplugin.armor.chain: true
+      yplugin.armor.diamond: true
+  yplugin.builder:
     description: Allows players to break and place blocks, bypassing config options.
     default: op
     children:
-      commons.block.break: true
-      commons.block.place: true
+      yplugin.block.break: true
+      yplugin.block.place: true
   # Below are all the permission nodes
   # Required for armor sets!
-  commons.armor.diamond:
+  yplugin.armor.diamond:
     description: Gives a player access to spawning a diamond armor set for themselves.
-  commons.armor.chain:
+  yplugin.armor.chain:
     description: Gives a player access to spawning a chain armor set for themselves.
-  commons.armor.gold:
+  yplugin.armor.gold:
     description: Gives a player access to spawning a gold armor set for themselves.
-  commons.armor.iron:
+  yplugin.armor.iron:
     description: Gives a player access to spawning an iron armor set for themselves.
-  commons.armor.leather:
+  yplugin.armor.leather:
     description: Gives a player access to spawning a leather armor set for themselves.
   # Admin related Permission nodes:
   # KickStick, Anti Kick, Debug Mode, Maintenance mode options.
-  commons.admin.antikick:
+  yplugin.admin.antikick:
     description: Allows a player to forbid from being kicked.
-  commons.admin.kickstick:
+  yplugin.admin.kickstick:
     description: Allows players to use the kickstick!
-  commons.debugmode:
+  yplugin.debugmode:
     description: Allow a player to enter debug mode! (GRANT CAREFULLY)
-  commons.maintenance.toggle:
+  yplugin.maintenance.toggle:
     description: Allows players to toggle maintenance mode on the server.
     default: op
-  commons.maintenance.join:
+  yplugin.maintenance.join:
     description: Allows players to join when the server is in maintenance mode.
     default: op
   # Below are many many many command-based permission
   # Nodes, associated with regulating the access of command between players!
-  commons.command.addcurrency:
+  yplugin.command.addcurrency:
     description: Allows players to use the addcurrency command, giving players the premium currency.
     default: op
-  commons.command.setspawn:
+  yplugin.command.setspawn:
     description: Allows a player to set the spawn of the world they're currently in.
-  commons.command.warps:
+  yplugin.command.warps:
     description: Allows players to use the warps command.
-  commons.command.workbench:
+  yplugin.command.workbench:
     description: Allows players to use the workbench command.
-  commons.command.warp:
+  yplugin.command.warp:
     description: Allows players to use the warp command.
-  commons.command.tree:
+  yplugin.command.tree:
     description: Allows players to generate trees via a command.
-  commons.command.tpa:
+  yplugin.command.tpa:
     description: Allows players to use the tpa command.
-  commons.command.tppos:
+  yplugin.command.tppos:
     description: Allows players to use the tppos command.
-  commons.command.teleportother:
+  yplugin.command.teleportother:
     description: Allows players to use the tpother command.
-  commons.command.tphere:
+  yplugin.command.tphere:
     description: Allows players to use the teleport here command.
-  commons.command.teleport:
+  yplugin.command.teleport:
     description: Allows players to use the teleport command.
-  commons.command.tpall:
+  yplugin.command.tpall:
     description: Allows players to use the teleport-all command.
-  commons.command.speed:
+  yplugin.command.speed:
     description: Allows players to use the speed command to change their speed.
-  commons.command.spawn:
+  yplugin.command.spawn:
     description: Allows players to use the spawn command.
-  commons.command.spawnmob:
+  yplugin.command.spawnmob:
     description: Allows players to use the spawnmob command.
-  commons.command.spawnmob.enderdragon:
+  yplugin.command.spawnmob.enderdragon:
     description: Allows players to use the spawnmob command, spawning an enderdragon.
-  commons.command.slay:
+  yplugin.command.slay:
     description: Allows players to use the slay command.
-  commons.command.skull:
+  yplugin.command.skull:
     description: Allows players to create player skulls using the skull command.
-  commons.command.setwarp:
+  yplugin.command.setwarp:
     description: Allows players to use the setwarp command.
-  commons.command.silence:
+  yplugin.command.silence:
     description: Allows players to use the silence command.
-  commons.silence.bypass:
+  yplugin.silence.bypass:
     description: Allows players to bypass the silencing of chat
-  commons.command.set:
+  yplugin.command.set:
     description: Allows players to use the set command, for managing firstPageEnabled sets.
-  commons.command.recipe:
+  yplugin.command.recipe:
     description: Allows player to use the recipe command.
-  commons.command.repair:
+  yplugin.command.repair:
     description: Allows player to use the repair command.
-  commons.command.potion:
+  yplugin.command.potion:
     description: Allows players to use the potions command.
     default: op
-  commons.command.more:
+  yplugin.command.more:
     description: Allows players to use the more command, giving them more items on the firstPageEnabled in their hand.
-  commons.command.message:
+  yplugin.command.message:
     description: Allows players to use the message command.
-  commons.command.id:
+  yplugin.command.id:
     description: Allows players to use the id command.
-  commons.command.item:
+  yplugin.command.item:
     description: Allows players to use the firstPageEnabled command.
-  commons.command.hat:
+  yplugin.command.hat:
     description: Allows players to use the hat command.
-  commons.command.heal:
+  yplugin.command.heal:
     description: Allows players to use the heal command.
-  commons.command.heal.other:
+  yplugin.command.heal.other:
     description: Allows players to use the heal command on others.
-  commons.commands.grass:
+  yplugin.commands.grass:
     description: Allows players to use the grass command.
-  commons.command.gamemode:
+  yplugin.command.gamemode:
     description: Allows players to use the gamemode command.
-  commons.command.god:
+  yplugin.command.god:
     description: Allows players to use the godmode command.
-  commons.command.gadgets:
+  yplugin.command.gadgets:
     description: Allows players to use the gadgets command.
-  commons.command.fireworks:
+  yplugin.command.fireworks:
     description: Allows players to use the fireworks command.
-  commons.command.fly:
+  yplugin.command.fly:
     description: Allows players to use the fly command.
-  commons.command.enchant:
+  yplugin.command.enchant:
     description: Allows players to use the enchant command.
     default: op
-  commons.command.feed:
+  yplugin.command.feed:
     description: Allows a player to feed themselves (or others) via the feed command
-  commons.command.time:
+  yplugin.command.time:
     description: Allows players to use all time-based commands.
     default: op
-  commons.command.armor:
+  yplugin.command.armor:
     description: Allows players to use the Armor command.
     default: op
-  commons.command.back:
+  yplugin.command.back:
     description: Allows players to use the back command
     default: op
-  commons.command.blocktext:
+  yplugin.command.blocktext:
     description: Allows players to use the blocktext command
     default: op
-  commons.command.clean:
+  yplugin.command.clean:
     description: Allows players to use the Clean Command and all its subcommands
     children:
-      commons.command.clean.entities: true
-      commons.command.clean.mobs: true
-  commons.command.clearinventory:
+      yplugin.command.clean.entities: true
+      yplugin.command.clean.mobs: true
+  yplugin.command.clearinventory:
     description: Allows players to use the ClearInventory Command
-  commons.command.clearinventory.other:
+  yplugin.command.clearinventory.other:
     description: Allows player to use the ClearInventory Command on other players.
-  commons.ban:
+  yplugin.ban:
     description: Allows players to use the ban command
     default: op
-  commons.command.buypremium:
+  yplugin.command.buypremium:
     description: Allows players to use the buypremium command
     default: op
-  commons.command.removepremium:
+  yplugin.command.removepremium:
     description: Allows players to use the removepremium command
     default:
